adding explore page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="collapse navbar-collapse" id="navbarCollapse">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a href="#home" class="nav-link">Home</a>
+							<a href="index.html" class="nav-link">Home</a>
 						</li>	
 						<li class="nav-item">
 							<a href="#explore-head-section" class="nav-link">Explore</a>
@@ -127,7 +127,7 @@
 					<div class="col text-center py-5">
 						<h3 class="display-4">Explore It</h3>
 						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A veritatis dolores vel, animi voluptas fugiat molestias quae est architecto perspiciatis facere nulla itaque iusto modi quaerat vitae. Numquam, exercitationem perferendis.</p>
-						<a href="#" class="btn btn-outline-secondary" role="button">Find Out More </a>
+						<a href="explore.html" class="btn btn-outline-secondary" role="button">Find Out More </a>
 
 					</div>
 					
@@ -316,9 +316,9 @@
 											<input type="submit" value="Submit" class="btn btn-primary btn-block">
 										</form>
 									</div>
-									<div class="modal-footer">
+									<!-- <div class="modal-footer">
 										<button class="btn btn-secondary" data-dismiss="modal">Close</button>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
